Update personal details in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Data Analytics Portfolio</title>
+  <title>Sai Puja Tanmayi Srivillibhutturu | Data Analytics Portfolio</title>
   <meta name="description" content="Portfolio showcasing data analytics, BI dashboards, and machine learning projects using SQL, Python, R, Power BI, and Tableau." />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -11,7 +11,7 @@
 <body>
   <header class="hero">
     <div class="container">
-      <h1>Your Name</h1>
+      <h1>Sai Puja Tanmayi</h1>
       <p class="subtitle">Data Analytics • Business Intelligence • Machine Learning</p>
 
       <div class="cta-row">
@@ -20,11 +20,11 @@
       </div>
 
       <div class="link-row">
-        <a href="mailto:your@email.com">Email</a>
+        <a href="mailto:saipujasrivilli@gmail.com">Email</a>
         <span>•</span>
         <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener">LinkedIn</a>
         <span>•</span>
-        <a href="https://github.com/yourgithub" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://github.com/saipujasrivilli" target="_blank" rel="noopener">GitHub</a>
       </div>
     </div>
   </header>
@@ -128,11 +128,11 @@
           Want to chat about analytics, BI dashboards, or machine learning? Reach out:
         </p>
         <div class="link-row">
-          <a href="mailto:your@email.com">your@email.com</a>
+          <a href="mailto:saipujasrivilli@gmail.com">your@email.com</a>
           <span>•</span>
-          <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener">LinkedIn</a>
+          <a href="hhttps://www.linkedin.com/in/sai-puja-tanmayi-srivillibhutturu/" target="_blank" rel="noopener">LinkedIn</a>
           <span>•</span>
-          <a href="https://github.com/yourgithub" target="_blank" rel="noopener">GitHub</a>
+          <a href="hhttps://github.com/saipujasrivilli" target="_blank" rel="noopener">GitHub</a>
         </div>
       </div>
     </section>
@@ -140,7 +140,7 @@
 
   <footer class="footer">
     <div class="container">
-      <p>© 2026 Your Name</p>
+      <p>© 2026 Sai Puja Tanmayi Srivillibhutturu </p>
     </div>
   </footer>
 </body>
