--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           Want to chat about analytics, BI dashboards, or machine learning? Reach out:
         </p>
         <div class="link-row">
-          <a href="mailto:saipujasrivilli@gmail.com">your@email.com</a>
+          <a href="mailto:saipujasrivilli@gmail.com">Email</a>
           <span>•</span>
           <a href="hhttps://www.linkedin.com/in/sai-puja-tanmayi-srivillibhutturu/" target="_blank" rel="noopener">LinkedIn</a>
           <span>•</span>
