Update title in index.html to include full name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Name | Analytics Portfolio</title>
+  <title>Sai Puja Tanmayi Srivillibhutturu | Analytics Portfolio</title>
   <meta name="description" content="Data Analytics & ML Portfolio - SQL, Python, Power BI, Tableau, Statistical Modeling" />
   <link rel="stylesheet" href="style.css" />
 </head>
