Revise personal details and project descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -4,34 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sai Puja Tanmayi Srivillibhutturu | Analytics Portfolio</title>
-  <meta name="description" content="Data Analytics & ML Portfolio - SQL, Python, Power BI, Tableau, Statistical Modeling" />
+  <meta name="description" content="Analytics & BI portfolio: SQL, Power BI, Tableau, Python, Excel. Finance + customer analytics + data storytelling." />
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <!-- Background Canvas -->
   <canvas id="jellyCanvas" aria-hidden="true"></canvas>
 
   <header class="hero">
     <div class="hero-inner">
-      <!-- Cute eyes -->
       <div class="eyes" aria-hidden="true">
-        <div class="eye">
-          <div class="lid"></div>
-          <div class="eyeball">
-            <div class="pupil"></div>
-          </div>
-        </div>
-        <div class="eye">
-          <div class="lid"></div>
-          <div class="eyeball">
-            <div class="pupil"></div>
-          </div>
-        </div>
+        <div class="eye"><div class="lid"></div><div class="eyeball"><div class="pupil"></div></div></div>
+        <div class="eye"><div class="lid"></div><div class="eyeball"><div class="pupil"></div></div></div>
       </div>
 
-      <h1>Your Name</h1>
-      <p class="tagline">Data Analytics • Business Intelligence • Machine Learning</p>
+      <h1>Sai Puja Tanmayi Srivillibhutturu</h1>
+      <p class="tagline">Business Intelligence • Data Analytics • Finance + Customer Insights</p>
 
       <div class="cta">
         <a class="btn" href="assets/resume.pdf" download>Download Resume</a>
@@ -39,11 +27,13 @@
       </div>
 
       <div class="links">
-        <a href="mailto:your@email.com">Email</a>
+        <span>Fairfax, VA</span>
         <span>•</span>
-        <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="mailto:saipujasrivilli@gmail.com">saipujasrivilli@gmail.com</a>
         <span>•</span>
-        <a href="https://github.com/yourgithub" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://github.com/saipujasrivilli" target="_blank" rel="noopener">GitHub</a>
+        <span>•</span>
+        <a href="https://linkedin.com/in/sai-puja-tanmayi-srivillibhutturu/" target="_blank" rel="noopener">LinkedIn</a>
       </div>
     </div>
   </header>
@@ -52,38 +42,69 @@
     <section id="about" class="section">
       <h2>About</h2>
       <p>
-        Master’s student in Analytics with experience in SQL, Python, R, Power BI, and Tableau.
-        I build dashboards, models, and reports that turn messy data into decision-ready insights—credit risk,
-        segmentation, KPI reporting, and predictive analytics.
+        Master’s student in Analytics (MPS) with a finance background (B.Com – Computer Applications). I build
+        decision-ready dashboards and analysis pipelines using SQL, Power BI, Tableau, Python/R, and Excel.
+        Interested in roles at the intersection of <strong>technical + financial + product/process</strong>,
+        with a strong bias toward stakeholder communication, data quality, and measurable business impact.
       </p>
+      <div class="badges" aria-label="highlights">
+        <span class="badge">SQL</span>
+        <span class="badge">Power BI (DAX)</span>
+        <span class="badge">Tableau</span>
+        <span class="badge">Python/R</span>
+        <span class="badge">Excel (Pivots/VLOOKUP)</span>
+        <span class="badge">Data Quality</span>
+        <span class="badge">PSM I (Scrum)</span>
+      </div>
     </section>
 
     <section id="projects" class="section">
-      <h2>Projects</h2>
+      <h2>Featured Projects</h2>
 
       <div class="grid">
         <article class="card">
-          <h3>Credit Risk Prediction</h3>
-          <p>Built a predictive model to estimate loan default risk using ML workflows and statistical modeling.</p>
-          <p class="meta"><strong>Tools:</strong> Python, SQL, scikit-learn</p>
+          <h3>Credit Risk & Performance Analytics</h3>
+          <p>
+            Built an end-to-end credit risk analysis workflow: profiling, feature engineering, model training,
+            and evaluation to identify drivers of default risk and portfolio performance.
+          </p>
+          <p class="meta"><strong>Tools:</strong> Python, SQL, Excel • <strong>Methods:</strong> Logistic Regression, Tree Models, ROC-AUC</p>
         </article>
 
         <article class="card">
-          <h3>KPI Dashboards (Power BI)</h3>
-          <p>Built 3 KPI dashboards and presented insights to multiple stakeholders for performance tracking.</p>
-          <p class="meta"><strong>Tools:</strong> Power BI, DAX, Excel</p>
+          <h3>Market Segmentation & Business Insights</h3>
+          <p>
+            Segmented customers into behavioral cohorts and translated patterns into business actions
+            (targeting, retention, and product positioning).
+          </p>
+          <p class="meta"><strong>Tools:</strong> Python/R, SQL • <strong>Methods:</strong> Clustering, KPI comparison, profiling</p>
         </article>
 
         <article class="card">
-          <h3>Market Segmentation</h3>
-          <p>Performed segmentation using clustering and statistical analysis to identify distinct customer groups.</p>
-          <p class="meta"><strong>Tools:</strong> SQL, R/Python, Tableau</p>
+          <h3>KPI Dashboards for Multiple Departments</h3>
+          <p>
+            Built KPI dashboards in Power BI and delivered stakeholder-ready insights to department leadership,
+            improving visibility into performance and operational bottlenecks.
+          </p>
+          <p class="meta"><strong>Tools:</strong> Power BI, DAX, Excel • <strong>Focus:</strong> KPI definitions, UX, storytelling</p>
+        </article>
+
+        <article class="card">
+          <h3>Social Media / Instagram User Analytics</h3>
+          <p>
+            Analyzed engagement drivers using hashtags and sentiment signals; built queries to surface behavioral
+            patterns and trends for content strategy.
+          </p>
+          <p class="meta"><strong>Tools:</strong> MySQL, Python • <strong>Methods:</strong> trend analysis, sentiment features, cohort views</p>
         </article>
 
         <article class="card">
           <h3>Investor Behavior Research</h3>
-          <p>Applied predictive modeling to understand investor behavior patterns under varying market conditions.</p>
-          <p class="meta"><strong>Tools:</strong> Python, Statistics</p>
+          <p>
+            Independent research using predictive/statistical modeling to study investor behavior patterns under
+            uncertainty and behavioral biases.
+          </p>
+          <p class="meta"><strong>Tools:</strong> Python/R • <strong>Methods:</strong> hypothesis testing, regression fundamentals</p>
         </article>
       </div>
     </section>
@@ -92,26 +113,27 @@
       <h2>Skills</h2>
       <div class="skills">
         <div>
-          <h4>Core</h4>
+          <h4>Analytics</h4>
           <ul>
-            <li>SQL (joins, aggregations, window functions)</li>
-            <li>Python / R (EDA, modeling, validation)</li>
-            <li>Excel (pivots, reporting)</li>
+            <li>SQL: joins, aggregations, window functions, data validation checks</li>
+            <li>Excel: pivots, VLOOKUP/XLOOKUP, reporting, clean templates</li>
+            <li>Statistics: descriptive stats, regression basics, experimentation concepts</li>
           </ul>
         </div>
         <div>
-          <h4>Visualization</h4>
+          <h4>BI & Reporting</h4>
           <ul>
-            <li>Power BI (DAX, dashboards)</li>
-            <li>Tableau (data storytelling)</li>
+            <li>Power BI: DAX measures, KPI logic, dashboard UX</li>
+            <li>Tableau: visual storytelling & stakeholder-ready views</li>
+            <li>Documentation: metric definitions, assumptions, data quality notes</li>
           </ul>
         </div>
         <div>
-          <h4>Methods</h4>
+          <h4>Programming</h4>
           <ul>
-            <li>Cleaning & transformation</li>
-            <li>Regression, segmentation, time series basics</li>
-            <li>A/B testing concepts</li>
+            <li>Python/R: EDA, feature engineering, model evaluation</li>
+            <li>Data cleaning: missingness, outliers, schema consistency</li>
+            <li>Collaboration: cross-functional communication, presentations</li>
           </ul>
         </div>
       </div>
@@ -119,19 +141,19 @@
 
     <section id="contact" class="section">
       <h2>Contact</h2>
-      <p>Want to collaborate or chat about analytics? Reach out:</p>
+      <p>Open to internships/co-ops in BI / Analytics / Customer Insights. Best way to reach me:</p>
       <div class="links left">
-        <a href="mailto:your@email.com">your@email.com</a>
+        <a href="mailto:saipujasrivilli@gmail.com">saipujasrivilli@gmail.com</a>
         <span>•</span>
-        <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="https://linkedin.com/in/sai-puja-tanmayi-srivillibhutturu/" target="_blank" rel="noopener">LinkedIn</a>
         <span>•</span>
-        <a href="https://github.com/yourgithub" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://github.com/saipujasrivilli" target="_blank" rel="noopener">GitHub</a>
       </div>
     </section>
   </main>
 
   <footer class="footer">
-    <p>© 2026 Your Name</p>
+    <p>© 2026 Sai Puja Tanmayi Srivillibhutturu</p>
   </footer>
 
   <script src="script.js"></script>
