--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <h2>Contact</h2>
       <p>Open to internships/co-ops in BI / Analytics / Customer Insights. Best way to reach me:</p>
       <div class="links left">
-        <a href="mailto:saipujasrivilli@gmail.com">saipujasrivilli@gmail.com</a>
+        <a href="mailto:saipujasrivilli@gmail.com">Email</a>
         <span>•</span>
         <a href="https://linkedin.com/in/sai-puja-tanmayi-srivillibhutturu/" target="_blank" rel="noopener">LinkedIn</a>
         <span>•</span>
