--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="links">
         <span>Fairfax, VA</span>
         <span>•</span>
-        <a href="mailto:saipujasrivilli@gmail.com">saipujasrivilli@gmail.com</a>
+        <a href="mailto:saipujasrivilli@gmail.com">Email</a>
         <span>•</span>
         <a href="https://github.com/saipujasrivilli" target="_blank" rel="noopener">GitHub</a>
         <span>•</span>
